# evon-experiments

./: .gitignore  README.md  pyproject.toml
Minimalist_LLM_Pretraining/: README.md  download_dataset.py  download_dataset.sh  eval_llama_checkpoint_mc_loss.py  torchrun_main_DDP.py
Minimalist_LLM_Pretraining/configs/: llama_100m.json  llama_130m.json  llama_13b.json  llama_1b.json  llama_20m.json  llama_250m.json  llama_350m.json  llama_35m.json  llama_3b.json  llama_40m.json  llama_71m.json  llama_7b.json  llama_9m.json  qwen2_0.5b.json  qwen2_1b.json  qwen2_7b.json
clip-finetuning/: README.md  finetune.py  finetune_best_hparams.slurm  run_finetune.sh
clip-finetuning/best_hparams/cars/adamw/: config.yaml
clip-finetuning/best_hparams/cars/evon/: config.yaml
clip-finetuning/best_hparams/cars/ivon/: config.yaml
clip-finetuning/best_hparams/cars/soap/: config.yaml
modded-nanogpt/: .gitignore  README.md  eval_checkpoint_mc_loss.py  train_gpt2.py
modded-nanogpt/data/: cached_fineweb10B.py
scripts/: gpt_checkpoint_mc_eval_local.bash  gpt_speedrun_local.bash  llama_checkpoint_mc_eval_local.bash  llama_speedrun_local.bash  run_finetune.sh
src/: README.md
src/clip_finetune/: __init__.py  data.py  model.py  templates.py
src/mem_eff_pt/eff_pretraining/: __init__.py  args_utils.py  dataloader.py  dataloader_v2.py  modeling_llama.py  training_utils.py
src/mem_eff_pt/utils/: __init__.py  args.py  train_utils.py
src/vonsoap/: __init__.py  eval_utils.py
src/vonsoap/optimizers/: __init__.py  evon.py  ivon.py  soap.py
(+28 files in other folders)
