[project]
name = "vonsoap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "cmdstanpy>=1.3.0",
    "datasets>=4.7.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.4.1",
    "ivon-opt>=0.1.3",
    "kernels>=0.12.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.2",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "setuptools>=80.10.2",
    "tiktoken>=0.12.0",
    "torch==2.10",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=5.3.0",
    "typing-extensions==4.15.0",
    "wandb>=0.24.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vonsoap*", "mem_eff_pt*"]
